initial user model setup with password and bcrypt functionality... untested and not connected to DB yet.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "alchemy-sdk": "^2.2.0"
+    "alchemy-sdk": "^2.2.0",
+    "bcrypt": "^5.1.0",
+    "mongoose": "^6.7.0"
   }
 }
