--- a/server/package.json
+++ b/server/package.json
@@ -14,12 +14,17 @@
   "dependencies": {
     "apollo-server-express": "^3.6.2",
     "bcrypt": "^4.0.1",
+    "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
     "express": "^4.17.2",
     "graphql": "^16.3.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.8",
-    "stripe": "^8.67.0"
+    "multer": "^1.4.5-lts.1",
+    "node-fetch": "^2.6.7",
+    "sharp": "^0.31.2",
+    "stripe": "^8.67.0",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
