--- a/client/package.json
+++ b/client/package.json
@@ -9,13 +9,16 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "autoprefixer": "^10.4.13",
     "axios": "^1.1.3",
     "graphql": "^16.6.0",
     "jwt-decode": "^2.2.0",
+    "postcss": "^8.4.19",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "tailwindcss": "^3.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
