--- a/client/package.json
+++ b/client/package.json
@@ -4,26 +4,39 @@
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
+    "@alch/alchemy-web3": "^1.4.7",
     "@apollo/client": "^3.5.8",
-    "@stripe/stripe-js": "^1.3.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "autoprefixer": "^10.4.13",
-    "axios": "^1.1.3",
+    "axios": "^0.21.1",
+    "dotenv": "^8.6.0",
+    "dotenv-webpack": "^8.0.1",
     "graphql": "^16.6.0",
     "jwt-decode": "^2.2.0",
     "postcss": "^8.4.19",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.1",
-    "tailwindcss": "^3.2.4"
+    "react-scripts": "^5.0.1",
+    "tailwindcss": "^3.2.4",
+    "assert": "^2.0.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "process": "^0.11.10",
+    "react-app-rewired": "^2.2.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+   
+    "start": "react-app-rewired  --openssl-legacy-provider start", 
+  "build": "react-app-rewired  --openssl-legacy-provider build", 
+  "test": "react-app-rewired test", 
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -40,5 +53,17 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "assert": "^2.0.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "process": "^0.11.10",
+    "react-app-rewired": "^2.2.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.0"
   }
 }
