--- a/package.json
+++ b/package.json
@@ -16,9 +16,8 @@
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^5.3.0"
-  },
+  }, 
   "dependencies": {
-    "@alch/alchemy-web3": "^1.4.7",
-    "patch-package": "^6.5.0"
+    "@alch/alchemy-web3": "^1.4.7"
   }
 }
