--- a/client/package.json
+++ b/client/package.json
@@ -34,8 +34,8 @@
     "url": "^0.11.0"
   },
   "scripts": {
-    "start": "GENERATE_SOURCEMAP=false react-app-rewired  --openssl-legacy-provider start",
-    "build": "GENERATE_SOURCEMAP=false react-app-rewired  --openssl-legacy-provider build",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
